[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["xanderlifeftoahacked <freztshow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
python-dotenv = "^1.0.1"
uvicorn = "^0.28.0"
alembic = "^1.13.1"
python-jose = "^3.3.0"
httpx = "^0.27.0"
prometheus-fastapi-instrumentator = "^7.0.0"
prometheus-client = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
