[package]
name = "whiteboard"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
futures = "0.3.27"
socketioxide = {version = "0.15.0", features = ["msgpack"]} #
tokio = {version = "1.35.0", features = ["rt-multi-thread", "macros"]}
serde = { version = "1.0.193", features = ["derive"] }
rmpv = { version = "1.3.0", features = ["with-serde"] }
tower = { version = "0.5.0", default-features = false }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = "0.7.5"
hyper-util.version = "0.1.1"
hyper = { version = "1.0.1", features = ["http1", "server"] }
